--- a/src/main/resources/assets/specialskin/lang/en_us.json
+++ b/src/main/resources/assets/specialskin/lang/en_us.json
@@ -7,6 +7,7 @@
   "specialskin.settings.skinMode": "Skin Mode",
   "specialskin.settings.capeMode": "Cape Mode",
   "specialskin.settings.tabMode": "Tab List Mode",
+  "specialskin.settings.enabledPartsMode": "Applies To",
   "specialskin.settings.overrideMode.0": "Nobody",
   "specialskin.settings.overrideMode.0.desc": "Don't change anything",
   "specialskin.settings.overrideMode.1": "Only You",
@@ -19,7 +20,7 @@
   "specialskin.settings.modelType.0": "Slim",
   "specialskin.settings.modelType.1": "Wide",
   "specialskin.settings.modelParts": "Model Parts",
-  "specialskin.settings.modelParts.title": "Model Parts for Modified Skins",
+  "specialskin.settings.modelParts.title": "Model Parts for Overridden Skins",
   "specialskin.settings.skinPacks": "Make Skin Pack",
   "specialskin.settings.skinPacks.explanation": "Skin Packs are an easy setup for making resource packs for SpecialSkin",
   "specialskin.settings.skinPacks.name": "Pack Name",
